<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="label_imc">IMC</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso         do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,         acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC.</string>
    <string name="imc_height">Altura (cm)</string>
    <string name="imc_weight">Peso (kg)</string>
    <string name="label_button">Calcular</string>
    <string name="fields_invalidation_form">Os valores definidos nos campos não são válidos.</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">IMC: %1$.2f</string>
    <string name="tmb_response">TMB: %1$.2f</string>
    <string name="label_tmb">TMB</string>
    <string name="label_img">Click me!</string>
    <string name="save">Salvar</string>
    <string name="salved">Registro salvo com sucesso.</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calorica que o corpo nescessita com base no seu estilo de vida.</string>
    <string name="tbm_age">Idade</string>
</resources>