<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".ImcActivity">

        <TextView
            android:id="@+id/text_imc_desc"
            style="@style/TextViewForm"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            style="@style/EditTextViewForm"
            android:hint="@string/imc_weight" />

        <EditText
            android:id="@+id/edit_tmb_height"
            style="@style/EditTextViewForm"
            android:hint="@string/imc_height" />

        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextViewForm"
            android:hint="@string/tbm_age" />

        <Spinner
            style="@style/SpinnerForm"
            android:id="@+id/spinner_tmb_lifestyle"
            android:entries="@array/tmb_lifestyle" />

        <Button
            android:id="@+id/btn_tmb_calc"
            style="@style/ButtonForm"
            android:text="@string/label_button" />

    </LinearLayout>

</ScrollView>